--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,25 +1,20 @@
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>{{ title }}</h1>
-        <p>Welcome to {{ title }}</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
-
-
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
-          <h2>Meet the Flinstone Cast</h2>
-          <p><strong>The Flintstones</strong>
-          is an animated, prime-time American television sitcom that was broadcast from
-          September 30, 1960, to April 1, 1966, on ABC. The show was produced by 
-          Hanna-Barbera. The Flintstones was about a working-class Stone Age man's life with 
-          his family and his next-door neighbor and best friend.</p>
-          <p><a class="btn btn-default" href="list" role="button">View details &raquo;</a></p>
+        <div class="col-md-3">
+          <h1>DiceRollerIO</h1>
+          <p>
+            <a id="rollbtn" class="btn btn-primary btn-lg" role="button">
+              Roll Dice
+            </a>
+          </p>
         </div>
+        <div class="col-md-1 dice" id="displaydie1">0</div>
+        <div class="col-md-1 dice" id="displaydie2">0</div>
+        <div class="col-md-1 dice" id="displaydie3">0</div>
+        <div class="col-md-1 dice" id="displaydie4">0</div>
+        <div class="col-md-1 dice" id="displaydie5">0</div>
+        <div class="col-md-1 dice" id="displaydie6">0</div>
+        <div class="col-md-1 dice" id="displaydie7">0</div>
       </div>
 
