enabling rolling certain dice

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,12 +9,47 @@
             </a>
           </p>
         </div>
-        <div class="col-md-1 dice" id="displaydie1">0</div>
-        <div class="col-md-1 dice" id="displaydie2">0</div>
-        <div class="col-md-1 dice" id="displaydie3">0</div>
-        <div class="col-md-1 dice" id="displaydie4">0</div>
-        <div class="col-md-1 dice" id="displaydie5">0</div>
-        <div class="col-md-1 dice" id="displaydie6">0</div>
-        <div class="col-md-1 dice" id="displaydie7">0</div>
+        <div class="col-md-1">
+          <input type="checkbox" id="displaydie1toggle" name="displaydie1toggle" class="diceselector">
+          <label class="dice6 dice" id="displaydie1" for="displaydie1toggle">
+            0
+          </label>
+        </div>
+        <div class="col-md-1">
+          <input type="checkbox" id="displaydie2toggle" name="displaydie1toggle" class="diceselector">
+          <label class="dice6 dice" id="displaydie2" for="displaydie2toggle">
+            0
+          </label>
+        </div>
+        <div class="col-md-1">
+          <input type="checkbox" id="displaydie3toggle" name="displaydie1toggle" class="diceselector">
+          <label class="dice6 dice" id="displaydie3" for="displaydie3toggle">
+            0
+          </label>
+        </div>
+        <div class="col-md-1">
+          <input type="checkbox" id="displaydie4toggle" name="displaydie1toggle" class="diceselector">
+          <label class="dice6 dice" id="displaydie4" for="displaydie4toggle">
+            0
+          </label>
+        </div>
+        <div class="col-md-1">
+          <input type="checkbox" id="displaydie5toggle" name="displaydie1toggle" class="diceselector">
+          <label class="dice6 dice" id="displaydie5" for="displaydie5toggle">
+            0
+          </label>
+        </div>
+        <div class="col-md-1">
+          <input type="checkbox" id="displaydie6toggle" name="displaydie1toggle" class="diceselector">
+          <label class="dice6 dice" id="displaydie6" for="displaydie6toggle">
+            0
+          </label>
+        </div>
+        <div class="col-md-1">
+          <input type="checkbox" id="displaydie7toggle" name="displaydie1toggle" class="diceselector">
+          <label class="dice12 dice" id="displaydie7" for="displaydie7toggle">
+            0
+          </label>
+        </div>
       </div>
 
