--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,13 +13,22 @@ a {
 .dice {
 	border: 1px solid black;
 	border-radius: 8px;
-	height: 100px;
+	height: 78px;
+	width: 78px;
 	text-align: center;
 	font-size: 32px;
-	margin: 50px 10px;
-	padding-top: 30px;
+	margin: 50px 0px;
+	padding-top: 19px;
 }
-#displaydie7 {
+
+.dice12 {
 	background-color: rgba(200, 200, 200, 0.5);
 	border-radius: 33%;
+}
+
+.diceselector {
+	display: none;
+}
+.diceselector:checked + .dice {
+	background-color: rgba(255, 0, 0, .2);
 }
