Adding link to Github

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,7 +46,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2013</p>
+        <p>View on Github: <a href="https://github.com/newz2000/TeamDiceIO">newz2000/TeamDiceIO</a></p>
       </footer>
     </div> <!-- /container -->
 
